# repattern

./: README.md  pyproject.toml
.github/workflows/: publish.yml
repattern/: __init__.py
